remove my dc, and add example;

--- a/docker-compose-example.yaml
+++ b/docker-compose-example.yaml
@@ -1,7 +1,6 @@
 services:
   kptest:
-    #image: ghcr.io/kpirnie/kptv-restreamer:latest
-    image: localhost/kptest:latest
+    image: ghcr.io/kpirnie/kptv-restreamer:latest
     container_name: kptest
     hostname: kptest
     restart: unless-stopped
